--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "gh-pages": "^3.1.0",
+    "netlify-cli": "^5.2.3",
     "prettier": "^2.2.1"
   }
 }
