--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.4.3",
-    "react-twitter-embed": "3.0.3"
+    "react-twitter-embed": "3.0.3",
+    "antd": "^5.2.2"
   },
   "scripts": {
     "predeploy": "npm run build",
