--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "start": "node fetch.js && react-scripts start",
-    "build": "node fetch.js && react-scripts build",
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && node fetch.js && react-scripts start",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && node fetch.js && react-scripts build",
     "deploy": "gh-pages -b master -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
